--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,37 @@
 version: "3"
 services:
-  app:
-    image: yui
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - .:/var/www/html
+  # app:
+  #   image: yui
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - .:/var/www/html
+  #   ports:
+  #     - 9000:9000
+
+  mysql:
+    image: bitnami/mariadb:11.2.3
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MARIADB_DATABASE: ${DATABASE_NAME}
     ports:
-      - 9000:9000
+      - "${DATABASE_PORT}:3306"
+    volumes:
+      - polls_mysql_data:/bitnami/mariadb
+
+  pgsql:
+    image: bitnami/postgresql:latest
+    ports:
+      - '5432:5432'
+    environment:
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_DB=${DATABASE_NAME}
+    volumes:
+      - polls_pg_data:/bitnami/postgresql # Volume para persistir os dados
+
+volumes:
+  polls_mysql_data:
+  polls_pg_data:
