--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_DB=${DATABASE_NAME}
     volumes:
-      - yui_pg_data:/bitnami/postgresql # Volume para persistir os dados
+      - yui_pg_data:/bitnami/postgresql
     
 
 volumes:
