--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.1"
+        "pestphp/pest": "^2.34",
+        "pestphp/pest-plugin-drift": "^2.6"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
