--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "require-dev": {
         "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-drift": "^2.6"
+        "pestphp/pest-plugin-drift": "^2.6",
+        "friendsofphp/php-cs-fixer": "^3.54"
     },
     "config": {
         "allow-plugins": {
