--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "pestphp/pest": "^2.34",
         "pestphp/pest-plugin-drift": "^2.6",
-        "friendsofphp/php-cs-fixer": "^3.54"
+        "friendsofphp/php-cs-fixer": "^3.54",
+        "phpstan/phpstan": "^1.10"
     },
     "config": {
         "allow-plugins": {
