[ADD] Add FakerPHP

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "require": {
+        "fakerphp/faker": "^1.23"
     }
 }
