--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Yui\\": "app",
+            "App\\": "app",
             "Yui\\Tests\\": "tests",
             "Yui\\Core\\": "core"
         }
